--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -11,7 +11,10 @@
 		<div>
 			hey there partner <br/>
 		</div>
+		
+		<!-- Most liked Categories -->
 		{% if categories %}
+		<h1>Most Liked Categories</h1>
 		<ul>
 			{% for category in categories %}
 				<li><a href='/rango/category/{{ category.slug }}'>{{ category.name }}</a></li>
@@ -20,9 +23,22 @@
 		{% else %}
 			<strong>There are no categories present.</strong>
 		{% endif %}
-		<div>
+
+		<!-- Most Viewed Pages -->
+		{% if most_viewed_pages %}
+		<h1>Most Viewed Pages</h1>
+		<ul>
+			{% for page in most_viewed_pages %}
+				<li><a href='{{ page.url }}'>{{ page.title }}</a></li>
+			{% endfor %}
+		</ul>
+		{% else %}
+			<strong>There are no categories present.</strong>
+		{% endif %}
+
+		<!-- <div>
 			<a href="/rango/about/">About</a>
 			<img src="{% static 'images/octocat.png' %}" alt="Octcat" />	
-		</div>
+		</div> -->
 	</body>
 </html>
