Add page complete - end of chapter 7

--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -20,6 +20,11 @@
 				{% endif %}
 			{% endif %}
 		</div>
+		
+		<div>
+			<a href="/rango/add-page/{{category.slug}}/">Add Page</a>
+		</div>
+
 		<div>
 			<a href="/rango/">Go back</a>
 		</div>
