--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -24,6 +24,10 @@
 			<strong>There are no categories present.</strong>
 		{% endif %}
 
+		<br>
+		<a href='/rango/add-category/'>Add Category</a>
+		<br>
+		
 		<!-- Most Viewed Pages -->
 		{% if most_viewed_pages %}
 		<h1>Most Viewed Pages</h1>
