Correcting closing tags in html

--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -15,6 +15,7 @@
 							<a href="{{ page.url }}">{{ page.title }}</a>
 						</li>
 					{% endfor %}
+					</ul>
 				{% else %}
 					<strong>No pages added.</strong>
 				{% endif %}
@@ -29,3 +30,4 @@
 			<a href="/rango/">Go back</a>
 		</div>
 	</body>
+</html>
