Using url tag for all urls

--- a/templates/rango/add_category.html
+++ b/templates/rango/add_category.html
@@ -7,7 +7,7 @@
 	<body>
 		<h1>Add Category</h1>
 		<div>
-			<form id="add_category_form" method="post" action="/rango/add-category/">
+			<form id="add_category_form" method="post" action="{% url 'rango_add_category' %}">
 				{% csrf_token %}
 				{% for hidden_field in form.hidden_fields %}
 					{{ hidden_field }}
