--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -7,7 +7,7 @@
 	<body>
 		<h1>Add Page</h1>
 		<div>
-			<form id="add_page_form" method="post" action="/rango/add-page/{{category.slug}}/">
+			<form id="add_page_form" method="post" action="{% url 'rango_add_page' category.slug %}/">
 				{% csrf_token %}
 				{% for hidden_field in form.hidden_fields %}
 					{{ hidden_field }}
