--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -17,7 +17,7 @@
 		<h1>Most Liked Categories</h1>
 		<ul>
 			{% for category in categories %}
-				<li><a href='/rango/category/{{ category.slug }}'>{{ category.name }}</a></li>
+				<li><a href='{% url "rango_show_category" category.slug %}'>{{ category.name }}</a></li>
 			{% endfor %}
 		</ul>
 		{% else %}
@@ -25,7 +25,7 @@
 		{% endif %}
 
 		<br>
-		<a href='/rango/add-category/'>Add Category</a>
+		<a href='{% url "rango_add_category" %}'>Add Category</a>
 		<br>
 		
 		<!-- Most Viewed Pages -->
@@ -40,9 +40,9 @@
 			<strong>There are no categories present.</strong>
 		{% endif %}
 
-		<!-- <div>
-			<a href="/rango/about/">About</a>
-			<img src="{% static 'images/octocat.png' %}" alt="Octcat" />	
-		</div> -->
+		<div>
+			<a href="{% url 'rango_about' %}">About</a>
+			<!-- <img src="{% static 'images/octocat.png' %}" alt="Octcat" />	 -->
+		</div>
 	</body>
 </html>
