--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -17,7 +17,7 @@
 		<h1>Most Liked Categories</h1>
 		<ul>
 			{% for category in categories %}
-				<li><a href='{% url "rango_show_category" category.slug %}'>{{ category.name }}</a></li>
+				<li><a href='{% url "rango:show_category" category.slug %}'>{{ category.name }}</a></li>
 			{% endfor %}
 		</ul>
 		{% else %}
@@ -25,7 +25,7 @@
 		{% endif %}
 
 		<br>
-		<a href='{% url "rango_add_category" %}'>Add Category</a>
+		<a href='{% url "rango:add_category" %}'>Add Category</a>
 		<br>
 		
 		<!-- Most Viewed Pages -->
@@ -41,7 +41,7 @@
 		{% endif %}
 
 		<div>
-			<a href="{% url 'rango_about' %}">About</a>
+			<a href="{% url 'rango:about' %}">About</a>
 			<!-- <img src="{% static 'images/octocat.png' %}" alt="Octcat" />	 -->
 		</div>
 	</body>
