--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,15 +1,13 @@
-<!doctype html>
+{% extends 'rango/base.html' %}
 {% load staticfiles %}
 
-<html>
-	<head>
-		<meta charset="utf-8" />
-		<title>About the tutorial</title>
-	</head>
-	<body>
-		<div>
-			<img src="{% static 'images/about.jpg' %}" alt="About the tutorial" />
-			<p>This tutorial has been put together by {{author}}.</p>
-		</div>
-	</body>
-</html>
+{% block title %}
+	About the tutorial
+{% endblock %}
+		
+{% block body_content %}
+	<div>
+		<img src="{% static 'images/about.jpg' %}" alt="About the tutorial" />
+		<p>This tutorial has been put together by {{author}}.</p>
+	</div>
+{% endblock %}
