Adding a most_liked_categories template tag

--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -8,7 +8,7 @@
 
 {% block body_content %}
 	<!-- Categories -->
-	{% get_categories %}
+	{% most_liked_categories %}
 	
 	<!-- Most Viewed Pages -->
 	{% if most_viewed_pages %}
