Adding a link to register; Adding register template; Modifying gitingore to ignore media_root files

--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -27,6 +27,9 @@
 				<li>
 					<a href="{% url 'rango:add_category' %}">Add Category</a>
 				</li>
+				<li>
+					<a href="{% url 'rango:register' %}">Register</a>
+				</li>
 			</ul>
 		</div>
 	</body>
