Login implememnted; Logout in progress

--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -30,6 +30,9 @@
 				<li>
 					<a href="{% url 'rango:register' %}">Register</a>
 				</li>
+				<li>
+					<a href="{% url 'rango:login' %}">Login</a>
+				</li>
 			</ul>
 		</div>
 	</body>
