Restricted access and logout implemented.

--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -33,6 +33,12 @@
 				<li>
 					<a href="{% url 'rango:login' %}">Login</a>
 				</li>
+				<li>
+					<a href="{% url 'rango:restricted' %}">Restricted</a>
+				</li>
+				<li>
+					<a href="{% url 'rango:logout' %}">Logout</a>
+				</li>
 			</ul>
 		</div>
 	</body>
